--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Landing-Page</title>
     </head>
 
@@ -9,40 +10,51 @@
         <div class ="header">
             <div class= "headerlogo">header logo</div>
 
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+            <div class="headerlinks">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </div>
 
         <div class="intro">
             <div class = "introleft">
-                <div class = "title">
-                    This website is awesome
-                </div>
+                <div class = "title">This website is awesome</div>
                 <div class = "titlesub">
-                    <p>This website has some subtext that goes here udner the mian title. It's a smaller
+                    <p>This website has some subtext that goes here under the mian title. It's a smaller
                     font and the color is lower contrast
                     </p>
                 </div>
                 <button>Sign Up</button>
             </div>
             <div class="introright">
-                <img src="" alt="placeholder">
+                <img src="./images/jjk.jpg" alt="placeholder">
             </div>
         </div>
 
-        <div class="Members">
+        <div class="members-section">
             <div class="memberstext">Some random info</div>
 
-            <div class="membersimages">
-                <div class="members">
-                    <img src="" alt="member 1">
-                    <img src="" alt="member 2">
-                    <img src="" alt="member 3">
-                    <img src="" alt="member 4">
+            <div class="members">
+                <div class="membersimage">
+                    <img src="./images/yuji.jpg" alt="member 1">
+                    <div class="membername"> Yuji</div>
                 </div>
+                <div class="membersimage">
+                    <img src="./images/megumi.jpg" alt="member 2">
+                    <div class="membername"> Megumi</div>
+                </div>
+                <div class="membersimage">
+                    <img src="./images/nobara.jpeg" alt="member 3">
+                    <div class="membername"> Nobara</div>
+                </div>
+                <div class="membersimage">
+                    <img src="./images/gojo.jpg" alt="member 4">
+                    <div class="membername"> Gojo</div>
+                </div>
+                    
             </div>
 
 
@@ -53,8 +65,8 @@
             <div class="quoter">--Gojo Satoru</div>
         </div>
 
-        <div class="footer">
-            <div class="footertitle">Call to action! It's time!</div>
+        <div class="call-to-action">
+            <div class="call-to-action-title">Call to action! It's time!</div>
             <span">Sign up here!!!!</span>
             <button>Sign Up</button>
         </div>
