Add css to quote section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </div>
 
         <div class="quotesection">
-            <div class="quote"> Inspiring Quote </div>
-            <div class="quoter">--Gojo Satoru</div>
+            <div class="quote">"Throughout Heaven and Earth, I alone am the honored one."</div>
+            <span class="quoter">-Gojo Satoru</span>
         </div>
 
         <div class="call-to-action">
