--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class = "introleft">
                 <div class = "title">This website is awesome</div>
                 <div class = "titlesub">
-                    <p>This website has some subtext that goes here under the mian title. It's a smaller
+                    <p>This website has some subtext that goes here under the main title. It's a smaller
                     font and the color is lower contrast
                     </p>
                 </div>
@@ -65,10 +65,19 @@
             <span class="quoter">-Gojo Satoru</span>
         </div>
 
-        <div class="call-to-action">
-            <div class="call-to-action-title">Call to action! It's time!</div>
-            <span">Sign up here!!!!</span>
+        <div class="call-to-action-section">
+            <div class="call-to-action-text">
+                <div>
+                    <h2>
+                        It's time to exterminate curses!
+                    </h2>
+                    <p">
+                        Sign up here to join Jujutsu Kaisen!
+                    </p>
+                </div>
+            
             <button>Sign Up</button>
+        </div>
         </div>
 
     </body>
