Add footer and css adjustments

--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
         </div>
         </div>
 
+        <div class="footer">
+            <span>Copyright &copy; The Odin Project 2023</span>
+        </div>
+
     </body>
 </html>
